--- a/.github/workflows/ci_test_cleanup.yml
+++ b/.github/workflows/ci_test_cleanup.yml
@@ -29,9 +29,9 @@ jobs:
         with:
           user: ${{ secrets[matrix.user] }}
           site: ${{ secrets.CORSO_M365_TEST_SITE_URL}}
-          folder-prefix: "Corso_Restore_, TestRestore, testfolder, incrementals_ci_, Alcion_Restore_"
-          libraries: ${{ secrets.CORSO_M365_TEST_SITE_LIBRARIES }} 
-          older-than: ${{ env.HALF_HOUR_AGO }}
+          folder-prefix: ${{ env.CORSO_M365_TEST_PREFIXES }} 
+          libraries: ${{ vars.CORSO_M365_TEST_SITE_LIBRARIES }} 
+          older-than: ${{ vars.HALF_HOUR_AGO }}
           azure-client-id: ${{ secrets.CLIENT_ID }}
           azure-client-secret: ${{ secrets.CLIENT_SECRET }}
           azure-tenant-id: ${{ secrets.TENANT_ID }}
