--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -111,7 +111,7 @@ jobs:
           go run . exchange emails \
           --user ${{ env.CORSO_M365_TEST_USER_ID }} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
-          --destination lt_${{ steps.repo-init.outputs.result }} \
+          --destination Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
           --count 4
 
       # run the tests
@@ -170,7 +170,7 @@ jobs:
         run: |
           set -euo pipefail
           ./corso restore exchange \
-          --email-folder lt_${{ steps.repo-init.outputs.result }} \
+          --email-folder Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
           --hide-progress \
           --backup "${{ steps.exchange-test.outputs.result }}" \
           2>&1 | tee $TEST_RESULT/exchange-restore-test.txt
@@ -180,7 +180,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.exchange-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "exchange"
-          TEST_DATA: lt_${{ steps.repo-init.outputs.result }}
+          TEST_DATA: Corso_Restore_st_${{ steps.repo-init.outputs.result }}
         run: |
           set -euo pipefail
           ./sanityCheck
@@ -213,7 +213,7 @@ jobs:
           ./corso restore exchange \
           --hide-progress \
           --backup "${{ steps.exchange-incremental-test.outputs.result }}" \
-          --email-folder lt_${{ steps.repo-init.outputs.result }} \
+          --email-folder Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
           2>&1 | tee $TEST_RESULT/exchange-incremantal-restore-test.txt
           echo result=$(grep -i -e 'Restoring to folder ' $TEST_RESULT/exchange-incremantal-restore-test.txt | sed "s/Restoring to folder//" )  >> $GITHUB_OUTPUT
         
@@ -221,7 +221,7 @@ jobs:
         env:
           SANITY_RESTORE_FOLDER: ${{ steps.exchange-incremantal-restore-test.outputs.result }}
           SANITY_RESTORE_SERVICE: "exchange"
-          TEST_DATA: lt_${{ steps.repo-init.outputs.result }}
+          TEST_DATA: Corso_Restore_st_${{ steps.repo-init.outputs.result }}
           BASE_BACKUP: ${{ steps.exchange-restore-test.outputs.result }}
         run: |
           set -euo pipefail
