skip owner permission in onvedrive restore check

--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -51,6 +51,8 @@ jobs:
 
       - run: mkdir test_results
 
+      - run: mkdir testlog
+
       # run the tests
       - name: Version Test
         run: |
