--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -112,7 +112,7 @@ jobs:
           CORSO_M365_LOAD_TEST_USER_ID: ${{ secrets.CORSO_M365_LOAD_TEST_USER_ID }}
         run: |
           go run . exchange emails \
-          --user ${{ env.CORSO_M365_TEST_USER_ID }} \
+          --mailbox ${{ env.CORSO_M365_TEST_USER_ID }} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
           --destination Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
           --count 4
@@ -123,11 +123,11 @@ jobs:
         run: |
           ./corso backup create exchange \
           --no-stats \
-          --user "${CORSO_M365_TEST_USER_ID}" \
-          --hide-progress \
-          --data 'email' \
-          --json \
-          2>&1 | tee $TEST_RESULT/backup_exchange.txt 
+          --mailbox "${CORSO_M365_TEST_USER_ID}" \
+           --hide-progress \
+           --data 'email' \
+            --json \
+            2>&1 | tee $TEST_RESULT/backup_exchange.txt 
 
           resultjson=$(sed -e '1,/Completed Backups/d' $TEST_RESULT/backup_exchange.txt ) 
 
@@ -200,7 +200,7 @@ jobs:
           ./corso backup create exchange \
           --no-stats \
           --hide-progress \
-          --user "${CORSO_M365_TEST_USER_ID}" \
+          --mailbox "${CORSO_M365_TEST_USER_ID}" \
           --json \
           2>&1 | tee $TEST_RESULT/backup_exchange_incremental.txt 
 
