Run sanity-tests only on ci job completion

--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -3,7 +3,12 @@ on:
   push:
     branches:
       - main
-  pull_request:
+
+  workflow_run:
+    workflows: ["CI build"]
+    types:
+      - completed
+
   workflow_dispatch:
     inputs:
       user:
