--- a/.github/workflows/ci_test_cleanup.yml
+++ b/.github/workflows/ci_test_cleanup.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Purge CI-Produced Folders for Users
         uses: ./.github/actions/purge-m365-data
         with:
-          user: ${{ secrets[matrix.user] }}
+          user: ${{ vars[matrix.user] }}
           folder-prefix: ${{ vars.CORSO_M365_TEST_PREFIXES }}
           older-than: ${{ env.HALF_HOUR_AGO }}
           azure-client-id: ${{ secrets.CLIENT_ID }}
@@ -58,7 +58,7 @@ jobs:
       - name: Purge CI-Produced Folders for Sites
         uses: ./.github/actions/purge-m365-data
         with:
-          site: ${{ secrets[matrix.site] }}
+          site: ${{ vars[matrix.site] }}
           folder-prefix: ${{ vars.CORSO_M365_TEST_PREFIXES }} 
           libraries: ${{ vars.CORSO_M365_TEST_SITE_LIBRARIES }} 
           older-than: ${{ env.HALF_HOUR_AGO }}
