--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -24,6 +24,6 @@ gmatev:
 
 amartinez:
   name: Ashlie Martinez
-  title: Product Engineer
+  title: Member of Technical Staff
   url: https://github.com/ashmrtn
   image_url: ./images/ashlie.png
