Add newlines in echo so things are easier to find

--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -74,7 +74,7 @@ jobs:
         run: |
           set -euo pipefail 
           prefix=`date +"%Y-%m-%d-%T"`
-          echo "Repo init test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nRepo init test\n" >> ${CORSO_LOG_FILE}
           ./corso repo init s3 \
           --no-stats \
           --hide-progress \
@@ -93,7 +93,7 @@ jobs:
       - name: Repo connect test
         run: |
           set -euo pipefail
-          echo "\nRepo connect test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nRepo connect test\n" >> ${CORSO_LOG_FILE}
           ./corso repo connect s3 \
           --no-stats \
           --hide-progress \
@@ -125,7 +125,7 @@ jobs:
       - name: Backup exchange test
         id: exchange-test
         run: |
-          echo "\nBackup Exchange test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup Exchange test\n" >> ${CORSO_LOG_FILE}
           ./corso backup create exchange \
           --no-stats \
           --mailbox "${CORSO_M365_TEST_USER_ID}" \
@@ -148,7 +148,7 @@ jobs:
       - name: Backup exchange list test
         run: |
           set -euo pipefail
-          echo "\nBackup Exchange list test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup Exchange list test\n" >> ${CORSO_LOG_FILE}
           ./corso backup list exchange \
           --no-stats \
           --hide-progress \
@@ -164,7 +164,7 @@ jobs:
       - name: Backup exchange list single backup test
         run: |
           set -euo pipefail
-          echo "\nBackup Exchange list single backup test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup Exchange list single backup test\n" >> ${CORSO_LOG_FILE}
           ./corso backup list exchange \
           --no-stats \
           --hide-progress \
@@ -182,7 +182,7 @@ jobs:
         id: exchange-restore-test
         run: |
           set -euo pipefail
-          echo "\nBackup Exchange restore test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup Exchange restore test\n" >> ${CORSO_LOG_FILE}
           ./corso restore exchange \
           --no-stats \
           --email-folder Corso_Restore_st_${{ steps.repo-init.outputs.result }} \
@@ -205,7 +205,7 @@ jobs:
         id: exchange-incremental-test
         run: |
           set -euo pipefail
-          echo "\nBackup Exchange incremental test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup Exchange incremental test\n" >> ${CORSO_LOG_FILE}
           ./corso backup create exchange \
           --no-stats \
           --hide-progress \
@@ -227,7 +227,7 @@ jobs:
         id: exchange-incremantal-restore-test
         run: |
           set -euo pipefail
-          echo "\nBackup Exchange incremental restore test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup Exchange incremental restore test\n" >> ${CORSO_LOG_FILE}
           ./corso restore exchange \
           --no-stats \
           --hide-progress \
@@ -253,7 +253,7 @@ jobs:
         id: onedrive-test
         run: |
           set -euo pipefail
-          echo "\nBackup OneDrive test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup OneDrive test\n" >> ${CORSO_LOG_FILE}
           ./corso backup create onedrive \
           --no-stats \
           --hide-progress \
@@ -275,7 +275,7 @@ jobs:
       - name: Backup onedrive list test
         run: |
           set -euo pipefail
-          echo "\nBackup OneDrive list test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup OneDrive list test\n" >> ${CORSO_LOG_FILE}
           ./corso backup list onedrive \
           --no-stats \
           --hide-progress \
@@ -291,7 +291,7 @@ jobs:
       - name: Backup onedrive list one backup test
         run: |
           set -euo pipefail
-          echo "\nBackup OneDrive list one backup test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup OneDrive list one backup test\n" >> ${CORSO_LOG_FILE}
           ./corso backup list onedrive \
           --no-stats \
           --hide-progress \
@@ -309,7 +309,7 @@ jobs:
         id: onedrive-restore-test
         run: |
           set -euo pipefail
-          echo "\nBackup OneDrive restore test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup OneDrive restore test\n" >> ${CORSO_LOG_FILE}
           ./corso restore onedrive \
           --no-stats \
           --restore-permissions \
@@ -332,7 +332,7 @@ jobs:
         id: onedrive-incremental-test
         run: |
           set -euo pipefail
-          echo "\nBackup OneDrive incremental test\n" >> ${CORSO_LOG_FILE}
+          echo -e "\nBackup OneDrive incremental test\n" >> ${CORSO_LOG_FILE}
           ./corso backup create onedrive \
           --no-stats \
           --hide-progress \
@@ -355,7 +355,7 @@ jobs:
         id: onedrive-incremental-restore-test
         run: |
           set -euo pipefail
-          echo "\nBackup OneDrive incremental restore test\n" >> $CORSO_LOG_FILE
+          echo -e "\nBackup OneDrive incremental restore test\n" >> $CORSO_LOG_FILE
           ./corso restore onedrive \
           --no-stats \
           --restore-permissions \
